# CMTI-Python-Backend

./: .gitignore  README.md  config.toml  pyproject.toml
cmti_tools/: __init__.py  config.toml  index.md  main.md  main.py  tools.md  tools.py
cmti_tools/data/: OAM_commodity_names.csv  OAM_commodity_names.xlsx  cmList.csv  elements.csv  metalList_utf.csv  metals.csv
cmti_tools/datamapper/: __init__.py  datamapper.py  defaultmappers.py
cmti_tools/datamappers/: mappings.md  mappings.py
cmti_tools/export/: __init__.py  export.md  export.py  index.md
cmti_tools/idmanager/: __init__.py  idmanager.md  idmanager.py  index.md
cmti_tools/import/: import.py
cmti_tools/importdata/: __init__.py  importdata.md  importdata.py  index.md
cmti_tools/qualitycontrol/: __init__.py  datagradeconfig.md  datagradeconfig.py  index.md  qualitycontrol.md  qualitycontrol.py
cmti_tools/tables/: __init__.py  index.md  tables.py
cmtitools/: __init__.py  cmtitools.py
cmtitools/idmanager/: idmanager.py
cmtitools/import/: import.py
cmtitools/qualitycontrol/: qualitycontrol.py
docs/: index.md  main.html  tools.html
docs/datamappers/: index.html  index.md  mappings.html
docs/export/: export.html  index.html
docs/idmanager/: idmanager.html  index.html
tests/: conftest.py  test_clean_table_data.py  test_config.py  test_convert_commodity_name.py  test_create_mappers.py  test_create_row_records.py  test_get_commodity.py  test_idmanager.py  test_import.py  test_importdata.py  test_map_to_worksheet.py  test_process_row.py  test_qualitycontrol.py  test_tables.py  test_tools.py
(+26 files in other folders)
